add many to one relationship from product to user

--- a/src/main/webapp/i18n/en/product.json
+++ b/src/main/webapp/i18n/en/product.json
@@ -26,6 +26,7 @@
       "type": "Type",
       "validPeriod": "Valid Period",
       "image": "Image",
+      "user": "User",
       "productCategory": "Product Category"
     }
   }
