update product_order, shopping_cart, cart_item, customer_detail entities using jdl

--- a/src/main/webapp/i18n/en/customerDetails.json
+++ b/src/main/webapp/i18n/en/customerDetails.json
@@ -23,7 +23,7 @@
       "city": "City",
       "country": "Country",
       "user": "User",
-      "cart": "Cart"
+      "shoppingCart": "Shopping Cart"
     }
   }
 }
