--- a/src/main/webapp/i18n/en/shoppingCart.json
+++ b/src/main/webapp/i18n/en/shoppingCart.json
@@ -16,10 +16,8 @@
       "detail": {
         "title": "Shopping Cart"
       },
-      "placedDate": "Placed Date",
-      "totalPrice": "Total Price",
-      "order": "Order",
-      "customerDetails": "Customer Details"
+      "customerDetails": "Customer Details",
+      "cartItem": "Cart Item"
     }
   }
 }
