--- a/src/main/webapp/i18n/zh-cn/customerDetails.json
+++ b/src/main/webapp/i18n/zh-cn/customerDetails.json
@@ -23,7 +23,7 @@
       "city": "City",
       "country": "Country",
       "user": "User",
-      "cart": "Cart"
+      "shoppingCart": "Shopping Cart"
     }
   }
 }
