--- a/src/main/webapp/i18n/zh-cn/gender.json
+++ b/src/main/webapp/i18n/zh-cn/gender.json
@@ -2,8 +2,8 @@
   "demoApp": {
     "Gender": {
       "null": "",
-      "MALE": "MALE",
-      "FEMALE": "FEMALE"
+      "MALE": "男",
+      "FEMALE": "女"
     }
   }
 }
