--- a/src/main/webapp/i18n/zh-cn/home.json
+++ b/src/main/webapp/i18n/zh-cn/home.json
@@ -1,19 +1,19 @@
 {
   "home": {
-    "title": "欢迎, Java Hipster!",
+    "title": "欢迎来到医疗健康服务平台!",
     "subtitle": "这里是首页",
     "logged": {
       "message": "您目前是以 \"{{username}}\" 账号登录."
     },
-    "question": "如果您有任何有关 JHipster 的问题, 可以查阅下列资源:",
+    "question": "如果您有任何有关 该平台 的问题, 可以查阅下列资源:",
     "link": {
-      "homepage": "JHipster 首頁",
-      "stackoverflow": "Stack Overflow 上关于 JHipster 的讨论",
-      "bugtracker": "JHipster 的缺陷追踪",
-      "chat": "JHipster public chat room",
-      "follow": "在 Twitter 上联络 @jhipster"
+      "homepage": "该平台 首頁",
+      "stackoverflow": "Stack Overflow 上关于 该平台 的讨论",
+      "bugtracker": "该平台 的缺陷追踪",
+      "chat": "该平台 public chat room",
+      "follow": "在 Twitter 上联络 @医疗健康服务平台"
     },
-    "like": "如果您喜欢 JHipster, 请记得给我们加星在",
+    "like": "如果您喜欢 JHipster, 请记得给我们加星",
     "github": "GitHub"
   }
 }
