--- a/src/main/webapp/i18n/zh-cn/productCategory.json
+++ b/src/main/webapp/i18n/zh-cn/productCategory.json
@@ -2,23 +2,23 @@
   "demoApp": {
     "productCategory": {
       "home": {
-        "title": "Product Categories",
-        "createLabel": "创建新 Product Category",
-        "createOrEditLabel": "创建或编辑 Product Category",
-        "notFound": "No Product Categories found"
+        "title": "商品类别管理",
+        "createLabel": "创建新 商品类别",
+        "createOrEditLabel": "创建或编辑 商品类别",
+        "notFound": "暂无商品类别"
       },
-      "created": "Product Category {{ param }} 创建成功",
-      "updated": "Product Category {{ param }} 更新成功",
-      "deleted": "Product Category {{ param }} 删除成功",
+      "created": "商品类别 {{ param }} 创建成功",
+      "updated": "商品类别 {{ param }} 更新成功",
+      "deleted": "商品类别 {{ param }} 删除成功",
       "delete": {
-        "question": "你确定要删除 Product Category {{ id }} 吗？"
+        "question": "你确定要删除 商品类别 {{ id }} 吗？"
       },
       "detail": {
-        "title": "Product Category"
+        "title": "商品类别"
       },
-      "name": "Name",
-      "description": "Description",
-      "product": "Product"
+      "name": "名称",
+      "description": "描述",
+      "product": "商品"
     }
   }
 }
