--- a/src/main/webapp/i18n/zh-cn/productOrder.json
+++ b/src/main/webapp/i18n/zh-cn/productOrder.json
@@ -2,27 +2,27 @@
   "demoApp": {
     "productOrder": {
       "home": {
-        "title": "Product Orders",
-        "createLabel": "创建新 Product Order",
-        "createOrEditLabel": "创建或编辑 Product Order",
-        "notFound": "No Product Orders found"
+        "title": "订单管理",
+        "createLabel": "创建新 订单",
+        "createOrEditLabel": "创建或编辑 订单",
+        "notFound": "暂无订单"
       },
-      "created": "Product Order {{ param }} 创建成功",
-      "updated": "Product Order {{ param }} 更新成功",
-      "deleted": "Product Order {{ param }} 删除成功",
+      "created": "订单 {{ param }} 创建成功",
+      "updated": "订单 {{ param }} 更新成功",
+      "deleted": "订单 {{ param }} 删除成功",
       "delete": {
-        "question": "你确定要删除 Product Order {{ id }} 吗？"
+        "question": "你确定要删除 订单 {{ id }} 吗？"
       },
       "detail": {
-        "title": "Product Order"
+        "title": "订单"
       },
-      "quantity": "Quantity",
-      "totalPrice": "Total Price",
-      "created": "Created",
-      "address": "Address",
-      "status": "Status",
-      "product": "Product",
-      "user": "User"
+      "quantity": "数量",
+      "totalPrice": "总价",
+      "created": "创建日期",
+      "address": "收货地址",
+      "status": "状态",
+      "product": "商品",
+      "user": "用户"
     }
   }
 }
