--- a/src/main/webapp/i18n/zh-cn/shoppingCart.json
+++ b/src/main/webapp/i18n/zh-cn/shoppingCart.json
@@ -2,22 +2,22 @@
   "demoApp": {
     "shoppingCart": {
       "home": {
-        "title": "Shopping Carts",
-        "createLabel": "创建新 Shopping Cart",
-        "createOrEditLabel": "创建或编辑 Shopping Cart",
-        "notFound": "No Shopping Carts found"
+        "title": "购物车管理",
+        "createLabel": "创建新 购物车",
+        "createOrEditLabel": "创建或编辑 购物车",
+        "notFound": "暂无购物车"
       },
-      "created": "Shopping Cart {{ param }} 创建成功",
-      "updated": "Shopping Cart {{ param }} 更新成功",
-      "deleted": "Shopping Cart {{ param }} 删除成功",
+      "created": "购物车 {{ param }} 创建成功",
+      "updated": "购物车 {{ param }} 更新成功",
+      "deleted": "购物车 {{ param }} 删除成功",
       "delete": {
-        "question": "你确定要删除 Shopping Cart {{ id }} 吗？"
+        "question": "你确定要删除 购物车 {{ id }} 吗？"
       },
       "detail": {
-        "title": "Shopping Cart"
+        "title": "购物车"
       },
-      "customerDetails": "Customer Details",
-      "cartItem": "Cart Item"
+      "customerDetails": "客户信息",
+      "cartItem": "购物车项"
     }
   }
 }
